k8s/network-policies/allow-payments-to-risk.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-payments-to-risk
  namespace: risk-prod

spec:
  podSelector: {}

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: payments-prod

  policyTypes:
  - Ingress
