k8s/network-policies/deny-cross-environment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-cross-environment

spec:
  podSelector: {}

  policyTypes:
  - Ingress
